--- a/nginx.conf
+++ b/nginx.conf
@@ -9,7 +9,7 @@ server {
 
     ## 2. Проксі до бек-енду (імена з Docker-DNS)
     location /api/ {
-        proxy_pass         http://products-backend:8080;   # ← або http://api:8080
+        proxy_pass         http://products-backend:80;
         proxy_set_header   Host $host;
         proxy_set_header   X-Real-IP $remote_addr;
         proxy_set_header   X-Forwarded-Proto $scheme;
