--- a/nginx.conf
+++ b/nginx.conf
@@ -1,19 +1,15 @@
-# <react-app>/nginx.conf
 server {
     listen 80;
 
-    ## 1. Статичний React
     location / {
         try_files $uri /index.html;
     }
 
-    ## 2. Проксі до бек-енду (імена з Docker-DNS)
+    # проксі у бекенд-контейнер у мережі products-net
     location /api/ {
-        proxy_pass         http://products-backend:80;
-        proxy_set_header   Host $host;
-        proxy_set_header   X-Real-IP $remote_addr;
-        proxy_set_header   X-Forwarded-Proto $scheme;
-        proxy_http_version 1.1;
-        proxy_set_header   Connection '';
+        proxy_pass http://products-backend:80;   # ← або http://api:80
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
     }
 }
+
