--- a/nginx.conf
+++ b/nginx.conf
@@ -1,13 +1,17 @@
 server {
     listen 80;
 
+    ## ← ДОДАЙТЕ кореневу папку зі статикою
+    root /usr/share/nginx/html;
+
+    # Статичний React / SPA-fallback
     location / {
-        try_files $uri /index.html;
+        try_files $uri $uri/ /index.html;
     }
 
-    # проксі у бекенд-контейнер у мережі products-net
+    # Проксі до бек-енду
     location /api/ {
-        proxy_pass http://products-backend:80;   # ← або http://api:80
+        proxy_pass http://products-backend:80;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
