--- a/nginx.conf
+++ b/nginx.conf
@@ -11,7 +11,7 @@ server {
 
     # Проксі до бек-енду
     location /api/ {
-        proxy_pass http://products-backend:80;
+        proxy_pass http://backend:80;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
