--- a/nginx.conf
+++ b/nginx.conf
@@ -11,6 +11,7 @@ server {
 
     # Проксі до бек-енду 
     location /api/ {
+        proxy_pass http://api:80;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
